exports[`test controller step by step 1`] = `
Object {
  "done": false,
  "value": Object {
    "command": Object {
      "commit": Object {
        "type": "LoadStart",
      },
      "type": "Commit",
    },
    "type": "Command",
  },
}
`;

exports[`test controller step by step 2`] = `
Object {
  "done": false,
  "value": Object {
    "command": Object {
      "effect": Object {
        "type": "HttpRequest",
        "url": "http://swapi.co/api/people/3/",
      },
      "type": "Effect",
    },
    "type": "Command",
  },
}
`;

exports[`test controller step by step 3`] = `
Object {
  "done": false,
  "value": Object {
    "command": Object {
      "commit": Object {
        "color": "red",
        "type": "LoadSuccess",
      },
      "type": "Commit",
    },
    "type": "Command",
  },
}
`;

exports[`test controller step by step 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`test controller with generated snapshot 1`] = `
Object {
  "result": undefined,
  "snapshot": Array [
    Object {
      "commit": Object {
        "type": "LoadStart",
      },
      "type": "Commit",
    },
    Object {
      "effect": Object {
        "type": "HttpRequest",
        "url": "http://swapi.co/api/people/3/",
      },
      "result": "{\"eye_color\":\"red\"}",
      "type": "Effect",
    },
    Object {
      "commit": Object {
        "color": "red",
        "type": "LoadSuccess",
      },
      "type": "Commit",
    },
  ],
}
`;
